[tool.poetry]
name = "etf_backend"
version = "0.1.0"
description = ""
authors = ["@DmitrySychev and @kylejb"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.5"
djongo = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
